[package]
name = "tempo"
version = "0.1.0"
edition = "2024"

[dependencies]
anstyle = "1.0.13"
anyhow = "1.0.102"
clap = { version = "4.5.60", features = ["derive"] }
clap_derive = "4.5.55"
ignore = "0.4.25"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
thiserror = "2.0.18"
toml = "1.0.3"
walkdir = "2.5.0"
